# redis-inspired-kv-store

./: CMakeLists.txt  README.md
data/: dump.rdb
include/: commands.h  database.h  parser.h  persistence.h  server.h
src/: commands.cpp  database.cpp  main.cpp  parser.cpp  persistence.cpp  server.cpp
